[gd_scene load_steps=5 format=3 uid="uid://i04ahyyq4hil"]

[ext_resource type="Script" path="res://scripts/manager/main_manager.gd" id="1_xup0c"]
[ext_resource type="Texture2D" uid="uid://cto7kbgcmsiq0" path="res://UI/Background/ENDLESS TOWER - BG.png" id="2_hjxys"]
[ext_resource type="FontFile" uid="uid://dymai06rub5rj" path="res://UI/Fonts/SPECTRAL-BOLD.TTF" id="3_6bae1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m62qv"]
bg_color = Color(0.14902, 0.0901961, 0.0313726, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.921569, 0.54902, 0.164706, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="main" type="CanvasLayer"]
script = ExtResource("1_xup0c")

[node name="Control" type="Control" parent="."]
z_index = 1
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="color" type="ColorRect" parent="Control"]
visible = false
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0666667, 0.156863, 1)

[node name="TextureRect" type="TextureRect" parent="Control"]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hjxys")
expand_mode = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
z_index = 1
z_as_relative = false
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = 46.0
offset_right = 124.0
offset_bottom = 94.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.901961, 0.388235, 1)
theme_override_fonts/font = ExtResource("3_6bae1")
theme_override_font_sizes/font_size = 30
text = "Endless Tower"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="button_play" type="Button" parent="Control"]
z_index = 1
z_as_relative = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -38.0
offset_right = 59.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_6bae1")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_m62qv")
text = "Play"
icon_alignment = 1

[node name="button_tutorial" type="Button" parent="Control"]
z_index = 1
z_as_relative = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = 9.0
offset_right = 58.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_6bae1")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_m62qv")
text = "Tutorial"

[node name="button_leaderboard" type="Button" parent="Control"]
z_index = 1
z_as_relative = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = 53.0
offset_right = 58.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_6bae1")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_m62qv")
text = "Leaderboard"

[node name="button_quit" type="Button" parent="Control"]
z_index = 1
z_as_relative = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = 95.0
offset_right = 57.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_6bae1")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_m62qv")
text = "Quit"

[connection signal="pressed" from="Control/button_play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="Control/button_tutorial" to="." method="_on_button_tutorial_pressed"]
[connection signal="pressed" from="Control/button_leaderboard" to="." method="_on_button_leaderboard_pressed"]
[connection signal="pressed" from="Control/button_quit" to="." method="_on_button_quit_pressed"]
